1_29/redis-stack/deploy.yaml
################################
### Services & Ingresses
################################

kind: Service
apiVersion: v1
metadata:
  name: redis-stack
  namespace: base
  labels:
    app.kubernetes.io/name: redis-stack
    app.kubernetes.io/version: "v1.0.0"
spec:
  ports:
    - name: api
      port: 9100
  selector:
    app.kubernetes.io/name: redis-stack

---


################################
### Deployments
################################

kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis-stack
  namespace: base
  labels:
    app.kubernetes.io/name: redis-stack
    app.kubernetes.io/version: "v1.0.0"
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-stack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-stack
        app.kubernetes.io/version: "v1.0.0"
    spec:
      containers:
        - name: redis-stack
          image: redis/redis-stack:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: insight
              protocol: TCP
            - containerPort: 6379
              name: server
              protocol: TCP
          volumeMounts:
            # Create on-disk volume to store exec logs
            - mountPath: /data
              name: data-volume
      volumes:
        - name: data-volume
          emptyDir: { }
