1_29/redis-stack/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-stack
  namespace: base
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: redis-stack-server.dev.handuan-cloud.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: redis-stack
                port:
                  name: server
    - host: redis-stack-insight.dev.handuan-cloud.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: redis-stack
                port:
                  name: insight
